fixed overflow in app

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
   flex-direction: column;
   row-gap: 1rem;
   min-height: 100vh;
-  min-width: 100vw;
   padding: 3rem 2rem;
   background-color: #e0f3fd;
   box-sizing: border-box;
